# glrmask

./: .gitignore  .gitmodules  .mcp.json  .temp.vocab.json  2026-01-30.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  MIGRATION_GUIDE.md  Makefile  README.md  REPORT.md  TEMP-plot-inspection.txt  TODO.md  advanced_reorder.py  all_tests.txt  analysis.py  analyze_rangeset_storage.py  analyze_schema_complexity.py  analyze_structure.py  analyze_timings.py  analyze_weights.py  analyze_weights_new.py  api_output.txt  base_token_sets_terminal.json  bdd_compression.py  bdd_global_tsid_first.py  bdd_interleaved.py  bdd_zdd_ordering.py  bench_broad.py  bench_mask_quick.py  bench_null_inline.py  breakdown_calc.py  build.rs  cancellation_baseline_fxhash_full.txt  cancellation_internal_full.txt  cancellation_internal_fxhash2_full.txt  (+146 more)
.cargo/: config.toml
.test_assets/: constraint_simplified1.rs.old  constraint_simplified1.rs.old.patch  example_diff_constraint_simplified1.ebnf
benches/: README.md  bounded_string_array_close.rs  cfa_sweep_schema_build_multithreaded.rs  cfa_sweep_schema_build_single_threaded.rs  github_trivial_o70256_build.rs  github_trivial_o70256_build_multithreaded.rs
benchmarking/: BENCHMARKING_PLAN.md  README.md  STATUS_REPORT.md  analyze_existing_data.py  benchmark_final_run.txt  benchmark_output.txt  benchmark_run2.txt  benchmark_suite.py  compare_engines.py  comprehensive_benchmark.py  correctness_check.py  debug_llguidance.py  debug_llguidance_schema.py  debug_sep1.py  framework_design.md  generate_constraint.py  generate_vocab.py  inspect_outlines.py  json_schema_to_ebnf.py  measure_max_stats.py  quick_test.py  run_json_schema_benchmarks.py  run_sep1_benchmarks.py  runner.py  test_infrastructure.py  test_llg.py  test_llguidance.py  test_outlines_wrapper.py  test_sep1_wrapper.py  test_xgrammar.py  test_xgrammar_mock_triton.py
docs/: api_boundary.md  architecture.md  benchmark-0.1.md  benchmark-full-corpus-2026-07-16.md  compile_pipeline.md  (+22 more)
glrmask-runtime/: Cargo.toml  README.md
glrmask-runtime/examples/: roundtrip.rs
glrmask-runtime/python/: Cargo.toml  pyproject.toml
glrmask-runtime/python/src/: lib.rs
glrmask-runtime/src/: compiler.rs  grammar.rs  lib.rs  vocab.rs
glrmask-runtime/src/automata/: mod.rs
glrmask-runtime/src/automata/lexer/: ast.rs  dfa.rs  mod.rs  tokenizer.rs
glrmask-runtime/src/automata/weighted_u32/: mod.rs  nwa.rs
glrmask-runtime/src/compiler/: mod.rs
glrmask-runtime/src/compiler/glr/: mod.rs  parser.rs  table.rs
glrmask-runtime/src/ds/: bitset.rs  leveled_gss.rs  vocab_prefix_tree.rs  weight.rs
glrmask-runtime/src/runtime/: constraint.rs  mod.rs  state.rs
glrmask-runtime/src/runtime/actions/: commit.rs  force.rs  mask.rs
glrmask-runtime/tests/: artifact_envelope.rs  runtime_session.rs
python/: Cargo.toml  README.md  common_interface.py  equality.py  example.py  example_js.py  example_with_real_tokenizer.py  optimize_model.sh  optimizer_general.py  precompute2_model.py  precompute3_model.py  pyproject.toml  requirements.txt  run_benchmarks.sh  run_variations.sh  serialized_grammar_constraint.json  serialized_grammar_constraint.nt  serialized_grammar_constraint.yaml  serialized_grammar_definition.json  sitecustomize.py
python/aug25/: _sep1.pyi  _sep1_min.pyi  benchmark_analyzer.py  benchmark_runner.py  commit_logic.py  common_interface.py  constraint_utils.py  create_additional_benchmark_plots.py  equality.py  optimization_coordinator.py  optimize_model.py  optimizer_general.py  precompute2_model.py  precompute3_model.py  py_parser.py  range_set.py  reduce_constraint.py  repl_inspector.py  stats.py  visualize_constraint.py
python/aug25/models/: CMakeLists.txt  brute_force_model.py  bruteforce_fast_rust_model.py  bruteforce_model.py  bruteforce_rust_model.py  deepseek-1.py  gemini-1.py  gemini-10.py  gemini-11.py  gemini-12.py  gemini-13.py  gemini-14.py  gemini-2.py  gemini-3.py  gemini-4.py  gemini-5.py  gemini-6.py  gemini-7.py  gemini-8.py  gemini-9.py  gpt-5-10.py  gpt-5-11.py  gpt-5-12.py  gpt-5-13.py  gpt-5-14.py  gpt-5-15.py  gpt-5-16.py  gpt-5-18.py  gpt-5-19.py  gpt-5-2.py  gpt-5-20.py  gpt-5-22.py  gpt-5-23.py  gpt-5-24.py  gpt-5-25.py  gpt-5-26.py  gpt-5-27.py  gpt-5-3.py  gpt-5-4.py  gpt-5-5.py  (+46 more)
python/aug25/models/icl_rangeset.cpython-312-darwin.so.dSYM/Contents/: Info.plist
python/aug25/models/icl_rangeset.cpython-312-darwin.so.dSYM/Contents/Resources/Relocations/aarch64/: icl_rangeset.cpython-312-darwin.so.yml
python/aug25/models/precompute3_engine.cpython-312-darwin.so.dSYM/Contents/: Info.plist
python/aug25/models/precompute3_engine.cpython-312-darwin.so.dSYM/Contents/Resources/Relocations/aarch64/: precompute3_engine.cpython-312-darwin.so.yml
python/aug25/range_set/: __init__.py  bitset_range_set.py  fast_py_range_set.py  ffi_bitset.py  ffi_range_set.py  nodeopt_optimizer.py  py_range_set.py  range_set.py  range_set_abc.py  rangeset_stats.py  roaring_range_set.py  set_range_set.py
python/benchmarks/: README.md  __init__.py  benchmark_llguidance.py  benchmark_sep1.py  benchmark_xgrammar.py  common.py  compare_results.py  correctness_test.py
python/gss_tester/: __init__.py  analyzer.py  fast_impl.py  fuzzer.py  interface.py  leveled_impl.py  reference_impl.py  run_benches.sh  run_benchmarks.sh  run_tests.sh  runner.py  rust_impl.py  test_spec.py
python/gss_tester/benchmarks/: __init__.py  analysis.py  analyzer.py  instrumentation.py  introspect.py  plotting.py  runner.py  workloads.py
python/gss_tester/implementations/: __init__.py  acc_map_impl.py  factored_leveled_impl.py  graph_impl.py  leveled_acc_table_impl.py  leveled_impl.py  leveled_impl_cpp.py  leveled_per_acc_impl.py  leveled_per_acc_standalone_impl.py  leveled_rs_impl.py  reference_impl.py  simple_impl.py
python/gss_tester/tests/: analyzer.py  fuzzer.py  runner.py  test_spec.py
python/leveled_rs/: Cargo.toml
python/leveled_rs/src/: core.rs  lib.rs
python/python/glrmask/: __init__.py
python/sep1/: __init__.py
python/src/: lib.rs
python/tests/: test_allocator_policy.py
(+1751 files in other folders)
