[package]
name = "glrmask"
version = "0.1.0"
edition = "2024"
description = "Grammar-constrained token masking for large language model decoding"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/glrmask"
repository = "https://github.com/IsaacBreen/grammars2024"
keywords = ["grammar", "llm", "decoding", "parser", "json-schema"]
categories = ["algorithms", "parsing"]
exclude = [".benchmarks/**", ".cache/**", "glrmask-runtime/**", "python/**", "python-runtime/**", "scripts/**", "target/**"]

[features]
default = []

[dependencies]
rustc-hash = "1"
ahash = "0.8"
smallvec = "1"
im = "15"
range-set-blaze = "0.3.0"
hashbrown = "0.15"
once_cell = "1"
blake3 = "1"

serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
regex-syntax = "0.8"
derivre = { version = "=0.3.8", default-features = false, features = ["compress"] }

rayon = "1"
dashmap = "6"
rand = "0.8"
thiserror = "1"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"

[[bench]]
name = "cfa_sweep_schema_build_single_threaded"
harness = false

[[bench]]
name = "cfa_sweep_schema_build_multithreaded"
harness = false

[[bench]]
name = "bounded_string_array_close"
harness = false

[workspace]
members = [
    ".",
    "python",
    "python-runtime",
    "glrmask-runtime",
    "glrmask-wasm",
    "glrmask-browser-artifact",
]
resolver = "2"
