[package]
name = "glrmask"
version = "0.1.0"
edition = "2024"
description = "Grammar-constrained token masking for context-free languages"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/glrmask"
repository = "https://github.com/IsaacBreen/glrmask"
keywords = ["grammar", "llm", "decoding", "parser", "json-schema"]
categories = ["algorithms", "parsing"]
exclude = [".agents/**", ".benchmarks/**", ".cache/**", ".idea/**", "glrmask-runtime/**", "notes/**", "patch_debug*.py", "python/**", "python-runtime/**", "scripts/**", "target/**"]

[features]
default = []
internal-api = []

[dependencies]
rustc-hash = "1"
ahash = "0.8"
smallvec = { version = "1", features = ["serde"] }
im = "15"
range-set-blaze = "0.3.0"
hashbrown = "0.15"
once_cell = "1"
blake3 = "1"

serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
regex-syntax = "0.8"
derivre = { version = "=0.3.8", default-features = false, features = ["compress"] }

rayon = "1"
dashmap = "6"
rand = "0.8"
thiserror = "1"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"
# Enable the unstable bridge only while building this package's tests,
# examples, and benchmarks. Normal dependency builds keep the narrow API.
glrmask_internal_dev = { package = "glrmask", path = ".", features = ["internal-api"] }

[[bench]]
name = "cfa_sweep_schema_build_single_threaded"
harness = false

[[bench]]
name = "cfa_sweep_schema_build_multithreaded"
harness = false

[[bench]]
name = "bounded_string_array_close"
harness = false

[[example]]
name = "profile_glr"

[[test]]
name = "integration"

[[test]]
name = "mre"

[[test]]
name = "o4836_unicode_escape_key"

[[test]]
name = "json_schema_unicode_escape_characterization"

[[test]]
name = "o35155_tokenizer_scaling"

[[test]]
name = "o25804_mask_commit_mismatch"

[[test]]
name = "ordered_anyof_ambiguity"

[[test]]
name = "snowplow_hostname_replay_mre"

[[test]]
name = "direct_glrm_ordered_suffix_fixed_n5"

[[test]]
name = "direct_glrm_ordered_suffix_ambiguity"

[[test]]
name = "o13029_unit_inlining_false_negative"

[[test]]
name = "o15627_schema_gss_split_mre"

[workspace]
members = [
    ".",
    "python",
    "python-runtime",
    "glrmask-runtime",
    "glrmask-wasm",
    "glrmask-browser-artifact",
]
resolver = "2"
