[package]
name = "glrmask-runtime"
version = "0.1.0"
edition = "2024"
description = "Runtime-only constraint execution for serialized glrmask constraints"
license = "MIT OR Apache-2.0"

[dependencies]
rustc-hash = "1"
ahash = "0.8"
smallvec = "1"
im = "15"
range-set-blaze = "0.3.0"
hashbrown = "0.15"
once_cell = "1"
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"
rand = "0.8"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
