[package]
name = "_sep1"
version = "0.1.0"
edition = "2021"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_sep1"
crate-type = ["cdylib"]

[dependencies]
bimap = "0.6.3"
bitvec = "1.0.1"
numpy = { version = "0.24.0", features = [] }
pyo3 = { version = "0.24.2", features = ["extension-module", "macros"] }
sep1 = { path = "../" }
ouroboros = "0.18.5"

[build-dependencies]
pyo3 = "0.24.2"
regex = "1.11.1"
