[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "glrmask"
version = "0.1.1"
requires-python = ">=3.9,<3.14"
description = "Extremely fast grammar-constrained decoding for LLMs"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
license-files = ["licenses/LICENSE-MIT", "licenses/LICENSE-APACHE"]
dependencies = ["numpy>=1.21"]

[project.urls]
Documentation = "https://github.com/IsaacBreen/glrmask/tree/main/python"
Repository = "https://github.com/IsaacBreen/glrmask"
Changelog = "https://github.com/IsaacBreen/glrmask/blob/main/CHANGELOG.md"

[tool.maturin]
features = []
python-source = "python"
module-name = "glrmask._glrmask"
