[package]
name = "_glrmask_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "_glrmask_runtime"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
numpy = "0.24.0"
glrmask_runtime = { package = "glrmask-runtime", path = ".." }
self_cell = "1"
